--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Spring Framework Guru Courses</title>
 
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-          rel="stylesheet"
+    <link rel="stylesheet"
           media="screen"
-    th:href="@{/css/bootstrap-3.3.4/dist/css/bootstrap.min.css}"/>
+          th:href="@{/css/bootstrap-3.3.4/dist/css/bootstrap.min.css}"/>
 
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
-    th:src="@{/js/jquery-2.1.4.min.js}"></script>
+    <script th:src="@{/js/jquery-2.1.4.min.js}"></script>
 
     <link th:href="@{/css/custom.css}"
           rel="stylesheet"
@@ -40,8 +38,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/BXwTFNXDD4SjVt6H78-It1YgNj8=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
-                                     class="course-box-image" alt="None">
+                                     th:src="@{/images/SpringIntroThumb.png}"
+                                     class="course-box-image"
+                                     alt="None">
                             </div>
                             <div class="course-listing-title">
                                 Introduction to Spring
@@ -54,8 +53,8 @@
                 </div>
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
-                        <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                        <img alt="John Thompson"
+                             th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
                             John Thompson
@@ -76,8 +75,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/xmIEDF_cDxZz4E2mLiV5N52_yPo=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/YnsFJMclS5aYmtiAMSX0_ThumbSPRINcore.png"
-                                     class="course-box-image">
+                                     th:src="@{/images/SpringCoreThumb.png}"
+                                     class="course-box-image"
+                                     alt="None">
                             </div>
                             <div class="course-listing-title">
                                 Spring Core
@@ -90,8 +90,8 @@
                 </div>
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
-                        <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                        <img alt="John Thompson"
+                             th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
                             John Thompson
@@ -112,8 +112,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/VcMKL8A-nGdHEgrHRy5bPuqFhtU=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/fMahox0zTOW4gYkMMjmN_ThumbSPRINcoreAdv.png"
-                                     class="course-box-image">
+                                     th:src="@{/images/SpringCoreAdvancedThumb.png}"
+                                     class="course-box-image"
+                                     alt="None">
                             </div>
                             <div class="course-listing-title">
                                 Spring Core Advanced
@@ -126,8 +127,8 @@
                 </div>
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
-                        <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                        <img alt="John Thompson"
+                             th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
                             John Thompson
@@ -151,7 +152,8 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/XPW5zGBgneHuCKQx52cNcAwsuBQ=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/wc9ORhpRQUataALq2ejc_ThumbSPRINcoreDevOps2.png"
+                                     th:src="@{/images/SpringCoreAdvancedThumb.png}"
+                                     alt="None"
                                      class="course-box-image">
                             </div>
                             <div class="course-listing-title">
@@ -165,8 +167,8 @@
                 </div>
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
-                        <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                        <img alt="John Thompson"
+                             th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
                             John Thompson
@@ -188,14 +190,15 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/iM6y2WkaU8PWBuGAHtA3OKqT-4A=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/DkBQKd4WQxWTCLnFwJCR_ThumbSPRINcoreUltimate.png"
-                                     class="course-box-image">
+                                     th:src="@{/images/SpringCoreUltimateThumb.png}"
+                                     class="course-box-image"
+                                     alt="None">
                             </div>
                             <div class="course-listing-title">
                                 Spring Core Ultimate
                             </div>
                             <div class="course-listing-subtitle">
-                                The Ulitmate Bundle of my Spring Courses
+                                The Ultimate Bundle of my Spring Courses
                             </div>
                         </div>
                     </a>
@@ -221,8 +224,9 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
-                                     src="//d6xfpzo6h49n1.cloudfront.net/wH-V7RfYswB8Q95LIdGzx-QLxKk=/fit-in/705x0/https://d2vvqscadf4c1f.cloudfront.net/J8mqML4lQRmUmM4gdCW0_Thumb_Thymeleaf.png"
-                                     class="course-box-image">
+                                     th:src="@{/images/ThymeleafThumb.png}"
+                                     class="course-box-image"
+                                     alt="">
                             </div>
                             <div class="course-listing-title">
                                 Thymeleaf
@@ -235,8 +239,8 @@
                 </div>
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
-                        <img align="left" alt="John Thompson"
-                             src="//d6xfpzo6h49n1.cloudfront.net/aIKHFbsYXBCe0wY0jwCIdITOB5k=/30x30/https://d2vvqscadf4c1f.cloudfront.net/uZC7XjnzTMyJJeq5hShi_IMG_2800square.jpg"
+                        <img alt="John Thompson"
+                             th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
                             John Thompson
