--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,17 +6,20 @@
 
     <link rel="stylesheet"
           media="screen"
+          href="../static/css/bootstrap-3.3.4/dist/css/bootstrap.min.css"
           th:href="@{/css/bootstrap-3.3.4/dist/css/bootstrap.min.css}"/>
 
-    <script th:src="@{/js/jquery-2.1.4.min.js}"></script>
+    <script src="../static/js/jquery-2.1.4.min.js"
+            th:src="@{/js/jquery-2.1.4.min.js}"></script>
 
-    <link th:href="@{/css/custom.css}"
+    <link href="../static/css/custom.css"
+          th:href="@{/css/custom.css}"
           rel="stylesheet"
           media="screen"/>
 
 </head>
 <body>
-<div class="jumbotron">
+<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">
     <div class="container">
         <h1>Spring Framework Guru</h1>
         <p class="lead" th:text="#{index.courses.tagline}">Tag line</p>
@@ -38,6 +41,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
+                                     src="../static/images/SpringIntroThumb.png"
                                      th:src="@{/images/SpringIntroThumb.png}"
                                      class="course-box-image"
                                      alt="None">
@@ -54,6 +58,7 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img alt="John Thompson"
+                             src="../static/images/instructor_jt.jpg"
                              th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
@@ -75,6 +80,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
+                                     src="../static/images/SpringCoreThumb.png"
                                      th:src="@{/images/SpringCoreThumb.png}"
                                      class="course-box-image"
                                      alt="None">
@@ -91,6 +97,7 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img alt="John Thompson"
+                             src="../static/images/instructor_jt.jpg"
                              th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
@@ -112,6 +119,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
+                                     src="../static/images/SpringCoreAdvancedThumb.png"
                                      th:src="@{/images/SpringCoreAdvancedThumb.png}"
                                      class="course-box-image"
                                      alt="None">
@@ -128,6 +136,7 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img alt="John Thompson"
+                             src="../static/images/instructor_jt.jpg"
                              th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
@@ -152,6 +161,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
+                                     src="../static/images/SpringCoreAdvancedThumb.png"
                                      th:src="@{/images/SpringCoreAdvancedThumb.png}"
                                      alt="None"
                                      class="course-box-image">
@@ -168,6 +178,7 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img alt="John Thompson"
+                             src="../static/images/instructor_jt.jpg"
                              th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
@@ -190,6 +201,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
+                                     src="../static/images/SpringCoreUltimateThumb.png"
                                      th:src="@{/images/SpringCoreUltimateThumb.png}"
                                      class="course-box-image"
                                      alt="None">
@@ -224,6 +236,7 @@
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
+                                     src="../static/images/ThymeleafThumb.png"
                                      th:src="@{/images/ThymeleafThumb.png}"
                                      class="course-box-image"
                                      alt="">
@@ -240,6 +253,7 @@
                 <div class="row course-listing-extra-info col-xs-12">
                     <div class="col-xs-8">
                         <img alt="John Thompson"
+                             src="../static/images/instructor_jt.jpg"
                              th:src="@{/images/instructor_jt.jpg}"
                              class="img-circle">
                         <div class="small course-author-name">
@@ -256,6 +270,9 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="footer" th:replace="fragments/footer :: footer">
 </div>
 
 </body>
